# image-ranker

./: .gitignore  CHANGELOG.md  OPEN_TODO.md  README.md  app.py  elo.py  pyproject.toml
.github/workflows/: release.yml  test.yml
scripts/: extract_release_notes.py
static/: browse-dir-style.css  context_modal.css  exclusion_modal.css  style.css
templates/: browse-dir.html  context_modal.html  index.html
tests/: test_resume_autosave.py
